--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "next start",
     "test": "vitest"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
@@ -27,7 +30,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.11.19",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -41,7 +44,8 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vitest": "^0.28.4"
   },
